--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,18 @@
-Source: nightbird
+Source: daily
 Section: web
 Priority: optional
 Maintainer: Vítězslav Dvořák <info@vitexsoftware.cz>
 Uploaders: Vitex <vitex@hippy.cz>
-Homepage: https://github.com/Vitexus/ThunderbirdNightlyDeb
+Homepage: https://github.com/Vitexus/ThunderbirdDailyDeb
 Standards-Version: 3.9.2
 
-Package: nightbird
+Package: daily
 Architecture: all
-Depends: libasound2, libc6, libfontconfig1, libfreetype6, libgcc1, libgdk-pixbuf2.0-0, libglib2.0-0, libgtk-3-0, libhunspell-1.4-0|libhunspell-1.3-0, libnspr4, libnss3, libpango-1.0-0, libsqlite3-0, libstartup-notification0, libstdc++6, libx11-6, libxcomposite1, libxdamage1, libxext6, libxfixes3, libxrender1, libxt6, zlib1g, fontconfig, procps, debianutils ,wget
-Recommends: gstreamer1.0-libav, gstreamer1.0-plugins-good
-Suggests: fonts-stix | otf-stix, fonts-lmodern, mozplugger, libgssapi-krb5-2 | libkrb53, libgnomeui-0, libcanberra0
-Conflicts: iceweasel (<< 45), j2re1.4, pango-graphite (<< 0.9.3)
-Breaks: xul-ext-torbutton
-Provides: gnome-www-browser, www-browser, x-www-browser
-Description: Mozilla Nightly web browser installer
- Firefox Nihtly is a powerful, extensible web browser with support for modern
- web application technologies.
+Depends: debianutils (>= 1.16), fontconfig, psmisc, x11-utils, ${misc:Depends}, ${shlibs:Depends},
+Provides: mail-reader, icedove,
+Description: mail/news client with RSS, chat and integrated spam filter support
+ Thunderbird is an mail client suitable for free distribution.
+ It supports different mail accounts, no matter of the used protocol like
+ POP(s) or IMAP(s), has an integrated learning Spam filter, and offers easy
+ organization of mails with tagging and virtual folders. Also, more features
+ can be added by installing extensions.
