--- a/debian/Jenkinsfile
+++ b/debian/Jenkinsfile
@@ -62,7 +62,7 @@ architectures.each {
 		    // wget "https://ftp.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/thunderbird-${VERSION}.${LANGCODE}.linux-${archs}.tar.bz2" -O $TMPFILE
 
                     def VERSION = sh(
-                        script: 'curl -s https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/ | grep /pub/thunderbird/nightly/latest-comm-central-l10n | awk -F'"' '{print $2}' |  cut -c 63- | awk -F. '{ print $1 "." $2 }' | tail -n 1',
+                        script: 'curl -s https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/ | grep /pub/thunderbird/nightly/latest-comm-central-l10n | awk -F\'"\' \'{print $2}\' |  cut -c 63- | awk -F. \'{ print $1 "." $2 }\' | tail -n 1',
                         returnStdout: true
                     ).trim()
                     ver = VERSION + '+.' + env.BUILD_NUMBER  + '~' + distroCodename
