--- a/thunderbird-daily.desktop
+++ b/thunderbird-daily.desktop
@@ -2,12 +2,12 @@
 Name=Thunderbird
 Comment=Read/Write Mail/News with Thunderbird
 GenericName=Mail Client
-Exec=/opt/thunderbird/thunderbird %u
+Exec=/opt/daily/thunderbird %u
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Version=1.0
-Icon=thunderbird
+Icon=/opt/daily/chrome/icons/default/default128.png
 # Don't show up this (transitional) desktop file in the Categories.
 #Categories=Network;Email;News;GTK;
 # Also don't associate Icedove with the MIME types.
