--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -17,6 +17,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build Debian package
       uses: dawidd6/action-debian-package@v1.6.0
+      env:
+        DEBFULLNAME: Vítězslav Dvořák
+        DEBEMAIL: info@vitexsoftware.cz
+        LANG: C.UTF-8
     - name: github-action-publish-binaries
       uses: skx/github-action-publish-binaries@release-0.14
       env:
