--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -21,20 +21,20 @@ jobs:
         DEBFULLNAME: Vítězslav Dvořák
         DEBEMAIL: info@vitexsoftware.cz
         LANG: C.UTF-8
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v1.0.${{ github.run_number }}
-        release_name: Release v1.0.${{ github.run_number }}
-        draft: false
-        prerelease: false
-    - name: github-action-publish-binaries
-      uses: skx/github-action-publish-binaries@release-0.14
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        args: '*.deb'
-        release_id: ${{ steps.create_release.outputs.id }}
+    # - name: Create Release
+    #   id: create_release
+    #   uses: actions/create-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: v1.0.${{ github.run_number }}
+    #     release_name: Release v1.0.${{ github.run_number }}
+    #     draft: false
+    #     prerelease: false
+    # - name: github-action-publish-binaries
+    #   uses: skx/github-action-publish-binaries@release-0.14
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     args: '*.deb'
+    #     release_id: ${{ steps.create_release.outputs.id }}
