--- a/debian/Jenkinsfile
+++ b/debian/Jenkinsfile
@@ -1,133 +1,100 @@
 #!groovy
 
-// Aktuální verze Pipeline: https://github.com/VitexSoftware/BuildImages/blob/main/Test/Jenkinsfile-parael
+// Part of https://github.com/VitexSoftware/BuildImages
 
-String[] distributions = [
-    'debian:bookworm',
-    'debian:trixie',
-    'debian:forky',
-    'ubuntu:jammy',
-    'ubuntu:noble'
-]
+String[] architectures = [] // 'amd64', 'aarch64', 'arm', 'i386'
+String[] distributions = ['debian:forky', 'debian:bookworm', 'debian:trixie',  'ubuntu:focal', 'ubuntu:jammy']
 
 String vendor = 'vitexsoftware'
-String imagePrefix = 'multiflexi-'
+String distribution = ''
+String architecture = ''
+//String distroFamily = ''
+String distroCodename = ''
+String ver = ''
 
 properties([
     copyArtifactPermission('*')
 ])
-
-node {
+node() {
     ansiColor('xterm') {
         stage('SCM Checkout') {
             checkout scm
-        }
-    }
-}
-
-def branches = [:]
-
-distributions.each { distro ->
-    branches[distro] = {
-        def (distroFamily, distroCode) = distro.split(':')
-        def imageName = "${vendor}/${imagePrefix}${distroCode}:latest"
-        def buildImage
-        def artifacts = []
-        def buildVer
-
-        node {
-            ansiColor('xterm') {
-                stage("Checkout ${distro}") {
-                    checkout scm
-                    buildImage = docker.image(imageName)
-
-                    sh 'git checkout debian/changelog'
-                    buildVer = sh(
-                        script: "dpkg-parsechangelog --show-field Version",
-                        returnStdout: true
-                    ).trim() + ".${env.BUILD_NUMBER}~${distroCode}"
-                }
-
-                stage("Build ${distro}") {
-                    buildImage.inside {
-                        sh """
-                            dch -b -v ${buildVer} "${env.BUILD_TAG}"
-                            sudo apt-get update --allow-releaseinfo-change
-                            sudo chown jenkins:jenkins ..
-                            debuild-pbuilder -i -us -uc -b
-                            mkdir -p \$WORKSPACE/dist/debian/
-                            rm -rf \$WORKSPACE/dist/debian/*
-                            for deb in \$(awk '{print \$1}' debian/files); do
-                              mv "../\$deb" \$WORKSPACE/dist/debian/
-                            done
-                        """
-                        artifacts = sh(
-                            script: "awk '{print \$1}' debian/files",
-                            returnStdout: true
-                        ).trim().split('\n')
-                    }
-                }
-
-                stage("Test ${distro}") {
-                    buildImage.inside {
-                        def debconf_debug = 0
-                        sh """
-                            cd \$WORKSPACE/dist/debian/
-                            dpkg-scanpackages . /dev/null > Packages
-                            gzip -9c Packages > Packages.gz
-                            cd \$WORKSPACE
-                            echo "deb [trusted=yes] file://///\$WORKSPACE/dist/debian/ ./" | sudo tee /etc/apt/sources.list.d/local.list
-                            sudo apt-get update --allow-releaseinfo-change
-                        """
-                        artifacts.each { deb_file ->
-                            if (deb_file.endsWith('.deb')) {
-                                def pkgName = deb_file.tokenize('/')[-1].replaceFirst(/_.*/, '')
-                                def distroCodename = sh(
-                                    script: "lsb_release -sc",
-                                    returnStdout: true
-                                ).trim()
-                                echo "Installing ${pkgName} on ${distroCodename}"
-                                sh """
-                                    sudo DEBIAN_FRONTEND=noninteractive DEBCONF_DEBUG=${debconf_debug} \
-                                         apt-get -y install ${pkgName} \
-                                    || sudo apt-get -y -f install
-                                """
-                            }
+            def control = readFile(file:  env.WORKSPACE + '/debian/control')
+            def lines = control.readLines()
+            for (line in lines) {
+                if (line.trim()) {
+                    def (key,value) = line.split(': ').collect { it.trim() }
+                    if (key == 'Architecture') {
+                        if (value == 'any') {
+                            architectures = ['amd64', 'armhf', 'aarch64']
+                        } else {
+                            architectures = [value]
                         }
                     }
                 }
-
-                stage("Archive artifacts ${distro}") {
-                    buildImage.inside {
-                        artifacts.each { deb_file ->
-                            println "Archiving artifact: ${deb_file}"
-                            archiveArtifacts artifacts: "dist/debian/${deb_file}"
-                        }
-
-                        sh '''
-                            set -e
-                            if [ -f debian/files ]; then
-                              while read -r file _; do
-                                [ -n "$file" ] || continue
-                                rm -f "dist/debian/$file" || true
-                                rm -f "../$file" || true
-                                rm -f "$WORKSPACE/$file" || true
-                              done < debian/files
-                            fi
-                        '''
-                    }
-                }
-
             }
         }
     }
 }
 
+architectures.each {
+    architecture = it
 
-parallel branches
+    println 'Arch: ' + architecture
 
-node {
-    stage('Publish to Aptly') {
-        publishDebToAptly()
+    distributions.each {
+        distribution = it
+
+        println  'Dist:' + distribution
+
+        def dist = distribution.split(':')
+        //      distroFamily = dist[0]
+        distroCodename = dist[1]
+
+        def buildImage = ''
+
+        node(architecture) {
+            ansiColor('xterm') {
+                stage('Checkout ' + architecture + ' ' + distribution) {
+                    buildImage = docker.image(vendor + '/' + distribution)
+                    sh 'git checkout debian/changelog'
+
+		    // wget "https://ftp.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/thunderbird-${VERSION}.${LANGCODE}.linux-${archs}.tar.bz2" -O $TMPFILE
+
+                    def VERSION = sh(
+                        script: 'curl -s https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/ | grep /pub/thunderbird/nightly/latest-comm-central-l10n | awk -F\'"\' \'{print $2}\' |  cut -c 63- | awk -F. \'{ print $1 "." $2 }\' | tail -n 1',
+                        returnStdout: true
+                    ).trim()
+                    ver = VERSION + '+.' + env.BUILD_NUMBER  + '~' + distroCodename
+                }
+                stage('Build ' + architecture + ' ' + distribution) {
+                    buildImage.inside {
+                        sh 'dch -b -v ' + ver  + ' "' + env.BUILD_TAG  + '"'
+                        sh 'sudo apt-get update --allow-releaseinfo-change'
+                        sh 'sudo chown jenkins:jenkins ..'
+                        sh 'debuild-pbuilder  -i -us -uc -b'
+                        sh 'mkdir -p $WORKSPACE/dist/debian/ ; rm -rf $WORKSPACE/dist/debian/* ; for deb in $(cat debian/files | awk \'{print $1}\'); do mv "../$deb" $WORKSPACE/dist/debian/; done'
+                    }
+                }
+
+                stage('Test ' + architecture + ' ' + distribution) {
+                    buildImage.inside {
+                        def debconf_debug = 0 //Set to "5" or "developer" to debug debconf
+                        sh 'cd $WORKSPACE/dist/debian/ ; dpkg-scanpackages . /dev/null | gzip -9c > Packages.gz; cd $WORKSPACE'
+                        sh 'echo "deb [trusted=yes] file://///$WORKSPACE/dist/debian/ ./" | sudo tee /etc/apt/sources.list.d/local.list'
+                        sh 'sudo apt-get update --allow-releaseinfo-change'
+                        sh 'echo "INSTALATION"'
+
+                        sh 'IFS="\n\b"; for package in  `ls $WORKSPACE/dist/debian/ | grep .deb | grep -v dbgsym | awk -F_ \'{print \$1}\'` ; do  echo -e "${GREEN} installing ${package} on `lsb_release -sc` ${ENDCOLOR} " ; sudo  DEBIAN_FRONTEND=noninteractive DEBCONF_DEBUG=' + debconf_debug  + ' apt-get -y install $package ; echo "test now";  done;'
+                        stash includes: 'dist/**', name: 'dist-' + distroCodename
+                    }
+                }
+                stage('Copy artifacts ' + architecture + ' ' + distribution ) {
+                    buildImage.inside {
+                        sh 'mv $WORKSPACE/dist/debian/*.deb $WORKSPACE'
+                    }
+                }
+            }
+        }
     }
 }
